# InvoluteSpurGear

./: .gitignore  CMakeLists.txt  InvoluteSpurGear.pro  Main.ui  SpurGear.cpp  SpurGear.h  main.cpp  widget.cpp  widget.h
utils/: AngleUtils.cpp  AngleUtils.h  Matrix.cpp  Matrix.h  Pair.h  Radian.h  VectorUtils.h
